fix wording in help

--- a/server/trunk/web/root/templates/html/help/urls/index.html
+++ b/server/trunk/web/root/templates/html/help/urls/index.html
@@ -22,7 +22,7 @@ For <code>XMLRPC</code> functions, see <a href="[% c.uri_for('/help', 'xmlrpc') 
 <p>The default output is of course <code>HTML</code> format, like any website
 would do.</p>
 
-<p>Alternative output is obtain by passing argument either as <code>POST</code>
+<p>Alternative output is obtained by passing argument either as <code>POST</code>
 or <code>GET</code>:
 
 <ul>
