- add dynamic filter and information on distrib pages

--- a/server/trunk/web/root/templates/html/distrib/list_srpms.html
+++ b/server/trunk/web/root/templates/html/distrib/list_srpms.html
@@ -19,3 +19,9 @@
 [% INCLUDE 'distrib/list_srpms.tt' %]
 </div>
 </div>
+
+<div Id="sophie_body_additional">
+    <p>Medias in this distrib:</p>
+    [% INCLUDE 'distrib/distrib.tt'
+    xmlrpc = c.forward('/distrib/list', [ dist ]) %]
+</div>
