--- a/server/trunk/web/root/templates/html/distrib/distrib.html
+++ b/server/trunk/web/root/templates/html/distrib/distrib.html
@@ -1,3 +1,12 @@
 <!-- $Id$ -->
 
+<h2>[% metatitle | html %]</h2>
+
+<ul>
+<li><a href="[% c.uri_for('/', c.req.path, 'srpms') %]">All sources rpms</a></li>
+<li><a href="[% c.uri_for('/', c.req.path, 'rpms') %]">All binary rpms</a></li>
+</ul>
+
+<p>Medias:</p>
+
 [% INCLUDE 'distrib/distrib.tt' %]
