- add rpm link on requirement results

--- a/server/trunk/web/root/templates/html/analysis/required_by.tt
+++ b/server/trunk/web/root/templates/html/analysis/required_by.tt
@@ -15,7 +15,10 @@
 <ul>
 [% END %]
 [% info = c.forward('/rpms/basicinfo', [ pkg ]) %]
-<li>[% info.name | html %]-[% info.evr %]</li>
+<li>
+    <a href="[% c.uri_for('/rpms', pkg) %]">
+    [% info.filename | html %]</a>
+</li>
 [% IF loop.last %]
 </ul>
 [% END %]
