--- a/server/trunk/web/root/templates/html/chat/index.html
+++ b/server/trunk/web/root/templates/html/chat/index.html
@@ -10,7 +10,7 @@
     </form>
 </div>
 <div id="sophie_bot_help">
-    <p>This page simulate the Bot behavior you may meet on IRC.</p>
+    <p>This page simulates the Bot behavior you may meet on IRC.</p>
 </div>
 
 <div id="sophie_bot_reply">
