--- a/server/trunk/web/root/templates/html/rpms/rpms.tt
+++ b/server/trunk/web/root/templates/html/rpms/rpms.tt
@@ -7,14 +7,17 @@
 <li>Version: [% xmlrpc.info.version | html %]</li>
 <li>Release: [% xmlrpc.info.release | html %]</li>
 <li>Epoch: [% xmlrpc.info.epoch | html %]</li>
-<li>Architecture: [% xmlrpc.info.arch | html %]</li>
-<li>Distribution: [% xmlrpc.info.distribution | html %]</li>
-<li>Vendor: [% xmlrpc.info.vendor | html %]</li>
-<li>Packager: [% xmlrpc.info.packager | html %]</li>
 <li>Group: [% xmlrpc.info.group | html %]</li>
 <li>License: [% xmlrpc.info.license | html %]</li>
 <li>Url: <a href="[% xmlrpc.info.url | html %]">[% xmlrpc.info.url | html %]</a></li>
 <li>Summary: [% xmlrpc.info.summary | guessencode | html %]</li>
+</ul>
+<ul class="sophie_tag">
+<li>Architecture: [% xmlrpc.info.arch | html %]</li>
+<li>Size: [% xmlrpc.info.size | html %]</li>
+<li>Distribution: [% xmlrpc.info.distribution | html %]</li>
+<li>Vendor: [% xmlrpc.info.vendor | html %]</li>
+<li>Packager: [% xmlrpc.info.packager | html %]</li>
 </ul>
 
 <div id="sophie_rpm_description">
@@ -25,9 +28,11 @@
 <ul class="sophie_tag">
 [% IF xmlrpc.info.issrc %]
 <li>BuildArch: [% xmlrpc.info.buildarch | html %]</li>
-<li>BuildArch: [% xmlrpc.info.excludearch.join(', ') | html %]</li>
-<li>BuildArch: [% xmlrpc.info.exclusivearch.join(', ') | html %]</li>
+<li>ExcludeArch: [% xmlrpc.info.excludearch.join(', ') | html %]</li>
+<li>ExclusiveArch: [% xmlrpc.info.exclusivearch.join(', ') | html %]</li>
 [% ELSE %]
 <li>OptFlags: [% xmlrpc.info.optflags | html %]</li>
 [% END %]
+<li>Cookie: [% xmlrpc.info.cookie | html %]</li>
+<li>Buildhost: [% xmlrpc.info.buildhost | html %]</li>
 </ul>
