--- a/server/trunk/web/root/templates/html/about/index.html
+++ b/server/trunk/web/root/templates/html/about/index.html
@@ -1,9 +1,9 @@
 <!-- $Id$ -->
 <h2>Authors</h2>
 <ul>
-<li>Olivier Thauvin, main developper</li>
-<li>Grenoya, design</li>
-<li>Michael Scherer, occasional coder</li>
+<li>Olivier Thauvin (Nanar), main developper</li>
+<li>Claire Revillet (grenoya), design</li>
+<li>Michael Scherer (misc), occasional coder</li>
 </ul>
 
 <h2>Code and bugtracker</h2>
